add host parsing to ListSlashCommand